VR: Use local profile for page_info

This only changes the output when the user is browsing off the record.

Bug: 836459
Change-Id: Ic922cd8d971629bfeb1cc066ce77aa616f14ee57
Reviewed-on: https://chromium-review.googlesource.com/1126453
Reviewed-by: Michael Thiessen <mthiesse@chromium.org>
Commit-Queue: Amirhossein Simjour <asimjour@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572663}
Former-commit-id: 21d34562409c4cf7b232aa4921118117d4e9eab9